# rs-uefi-varstore

./: Cargo.toml
src/: attribute.rs  edk2.rs  lib.rs  status.rs  variable_authentication.rs  varstore.rs  varstore_shim.rs  varstore_sys.rs
