[package]
name = "rs-uefi-varstore"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "*"

uefi = { version = "0.19.1", features = ["alloc"] }
tristate = "0.1.1"

[lib]
path = "src/lib.rs"
test = true
crate-type = ["lib", "staticlib", "cdylib"]   # The crate types to generate.
